# dataguard-rls

./: Cargo.toml
crates/routes/: Cargo.toml
crates/routes/src/: get_html.rs  google_callback.rs  google_login.rs  lib.rs
database/: db.sql
view/: dashboard.html  index.html  popup.html
