[workspace]
resolver = "3"

members = [
    "bin",
    "crates/routes"]


[workspace.dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
serde = {version = "1", features = ["derive"]}
reqwest = { version = "0.13.2", features = ["json", "form"] }
tower-http = { version = "0.5", features = ["fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

routes = {path = "./crates/routes"}